<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Combat Assistant</string>

    <!-- general buttons -->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Ability -->
    <string name="ability_form_delete_message">Are you sure you want to delete this ability?</string>
    <string name="ability_form_delete_title">Confirm Delete</string>
    <string name="ability_form_name">Name:</string>
    <string name="ability_form_name_hint">Ability Name</string>
    <string name="ability_form_title">Ability</string>
    <string name="ability_form_type">Type:</string>
    <string name="ability_list">Abilities</string>
    <string name="ability_list_assign">-- Assign Ability --</string>
    <string name="ability_list_create">-- Add New Ability --</string>

    <!-- Ability Type -->
    <string name="ability_type_atWill">At Will</string>
    <string name="ability_type_atWill_feature">At Will (F)</string>
    <string name="ability_type_encounter">Encounter</string>
    <string name="ability_type_encounter_feature">Encounter (F)</string>
    <string name="ability_type_daily">Daily</string>
    <string name="ability_type_daily_feature">Daily (F)</string>

    <!-- Player Class -->
    <string name="playerClass_form_delete_message">Are you sure you want to delete this class?</string>
    <string name="playerClass_form_delete_title">Confirm Delete</string>
    <string name="playerClass_form_name">Name:</string>
    <string name="playerClass_form_name_hint">Class Name</string>
    <string name="playerClass_form_title">Class</string>
    <string name="playerClass_list">Classes</string>
    <string name="playerClass_list_create">-- Add New Class --</string>

    <!-- Race -->
    <string name="race_form_delete_message">Are you sure you want to delete this race?</string>
    <string name="race_form_delete_title">Confirm Delete</string>
    <string name="race_form_name">Name:</string>
    <string name="race_form_name_hint">Race Name</string>
    <string name="race_form_title">Race</string>
    <string name="race_list">Races</string>
    <string name="race_list_create">-- Add New Race --</string>

</resources>