<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:text="@string/ability_list"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:onClick="launchAbilityList"/>

    <Button
            android:text="@string/race_list"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:onClick="launchRaceList"/>

    <Button
            android:text="@string/playerClass_list"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:onClick="launchPlayerClassList"/>

</LinearLayout>