<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              android:baselineAligned="false"
              android:orientation="vertical"
              android:padding="12dp">

    <TextView
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/race_form_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="12dp"/>

    <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginBottom="12dp">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/race_form_name"
                    android:textSize="25sp"
                    android:paddingRight="12dp"/>

            <EditText
                    android:id="@+id/race_name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/race_form_name_hint"
                    android:textSize="25sp"/>
        </TableRow>

    </TableLayout>

    <fragment
            android:id="@+id/ability_list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="12dp"
            class="com.mtrubs.android.dnd.fragment.AbilityListFragment"/>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

        <Button
                android:id="@+id/delete"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/delete"
                android:onClick="delete"
                android:textSize="25sp"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"/>

        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:onClick="cancel"
                android:textSize="25sp"/>

        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:onClick="save"
                android:textSize="25sp"/>

    </LinearLayout>
</LinearLayout>